--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.0.1
   path: ^1.8.0
   flutter_launcher_icons: ^0.9.2
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
